タイトル完成（ランダムマッチのみ）ゲーム基礎動作成功

--- a/css/gameroom.css
+++ b/css/gameroom.css
@@ -18,39 +18,39 @@ body{
     height: 209px;
 }
 
-#box1, #box1_choice, #box1_ui {
+#box1_ui {
     top: 130px;
     left: 545px;
 }
-#box2, #box2_choice, #box2_ui {
+#box2_ui {
     top: 130px;
     left: 845px;
 }
-#box3, #box3_choice, #box3_ui {
+#box3_ui {
     top: 130px;
     left: 1145px;
 }
-#box4, #box4_choice, #box4_ui {
+#box4_ui {
     top: 340px;
     left: 545px;
 }
-#box5, #box5_choice, #box5_ui {
+#box5_ui {
     top: 340px;
     left: 845px;
 }
-#box6, #box6_choice, #box6_ui {
+#box6_ui {
     top: 340px;
     left: 1145px;
 }
-#box7, #box7_choice, #box7_ui {
+#box7_ui {
     top: 550px;
     left: 545px;
 }
-#box8, #box8_choice, #box8_ui {
+#box8_ui {
     top: 550px;
     left: 845px;
 }
-#box9, #box9_choice, #box9_ui {
+#box9_ui {
     top: 550px;
     left: 1145px;
 }
