--- a/css/title.css
+++ b/css/title.css
@@ -6,18 +6,21 @@ body{
     width: 100vw;
 }
 
-#random-match, #room-match{
+#match-icon, #title {
     position: absolute;
-    top: 50%;
+    width: 100%;
+    height: 0;
+    text-align: center;
+}
+
+#title-icon{
+    position: relative;
+    top: 2vw;
 }
 
 #random-match{
-    left: 20%;
-}
-
-#room-match{
-    visibility: hidden;
-    right: 20%;
+    position: relative;
+    top: 55vh;
 }
 
 #fade{
